Refector: code improvements